--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@nestjs/common": "10.4.1",
     "@nestjs/core": "10.4.1",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "10.4.1",
     "@prisma/client": "5.19.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
