--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -28,6 +30,7 @@
     "@prisma/client": "5.19.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "prisma": "5.19.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
